// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamoDBStreamHandler should index new projektis successfully 1`] = `
Object {
  "liittyvatSuunnitelmat": Array [
    Object {
      "asiatunnus": "atunnus123",
      "nimi": "Littyva suunnitelma 1 nimi",
    },
  ],
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "velho": Object {
    "kunnat": Array [
      "Tampere",
      "Nokia",
    ],
    "nimi": "Testiprojekti 1",
    "tilaajaOrganisaatio": "Uudenmaan ELY-keskus",
    "tyyppi": "TIE",
    "vaylamuoto": Array [
      "tie",
    ],
  },
}
`;

exports[`dynamoDBStreamHandler should index projekti updates successfully 1`] = `
Object {
  "liittyvatSuunnitelmat": Array [
    Object {
      "asiatunnus": "atunnus123",
      "nimi": "Littyva suunnitelma 1 nimi",
    },
  ],
  "muistiinpano": "moro",
  "velho": Object {
    "kunnat": Array [
      "Tampere",
      "Nokia",
    ],
    "nimi": "Testiprojekti 1",
    "tilaajaOrganisaatio": "Uudenmaan ELY-keskus",
    "tyyppi": "TIE",
    "vaylamuoto": Array [
      "tie",
    ],
  },
}
`;
